# ToF-MS

./: .gitignore  GUI.py  Makefile  README.md  TOF_Time_Tagger.cpp  TOF_Trigger_scheme.txt  bnc525.ps1  example.cpp  histogram.h  histograms.py  prueba.cpp
C++Histogram/: Makefile  hist.py  histogram.h  main-parallel.cpp  main.cpp  test.ipynb
C++Histogram/vstest/Compiling test/: histogram.h
C++Histogram/vstest/Histogram-Cmake-Test/: CMakeLists.txt  main-parallel.cpp  test.ipynb
Run_TOF-MS_programs/Debug/: GUI.py  Makefile  TOF_GUI.spec  TOF_Trigger_scheme.txt  bnc525.ps1  config.txt  histogram.py
data_testing/: 100kHz.txt  12500Hz.txt  25000Hz.txt  50000Hz.txt  hist2.py  histograms.py  output_testing.txt  time_conversion.py
xtdc_babel-main/: .gitignore  README.md
xtdc_babel-main/.github/workflows/: build_all.yml
xtdc_babel-main/include/: TimeTagger4_interface.h  xTDC4_interface.h
xtdc_babel-main/lib/x64/: timetagger4_user_guide_example  xtdc4_ugex
xtdc_babel-main/lib/x64/Debug/: bnc525.ps1  single_shot.txt
xtdc_babel-main/timetagger4_user_guide_example/: README.md
xtdc_babel-main/timetagger4_user_guide_example/driver/include/: TDC4_interface.h  TimeTagger4_interface.h
xtdc_babel-main/timetagger4_user_guide_example/src/: TOF_Time_Tagger.cpp  Timetagger4TOF.cpp  example11062024.cpp  histogram.h  merge copy.cpp  merge.cpp  prueba.cpp  snippets.cpp  test11062024.cpp  test12062024.cpp  testing.cpp  testing_2.cpp  testing_pulse_generator.cpp  time_measurment.cpp  timetagger4_user_guide_example.cpp
xtdc_babel-main/timetagger4_user_guide_example/tools/: CMakeLists.txt
xtdc_babel-main/xTDC4_user_guide_example/: README.md
xtdc_babel-main/xTDC4_user_guide_example/src/: xtdc4_user_guide_example.cpp
xtdc_babel-main/xTDC4_user_guide_example/tools/: CMakeLists.txt
